<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoteR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_header">Calculatrice de la Cote-R</string>
    <string name="average">Note</string>
    <string name="class_average">Moyenne de la classe</string>
    <string name="standard_deviation">Écart-type</string>
    <string name="ifg">Moyenne du groupe au secondaire</string>
    <string name="calculer">Calculer ma cote-R</string>
    <string name="coter">Votre Cote-R</string>

</resources>
