<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center">





            <TextView
                android:text="@string/app_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/myText"
                android:layout_gravity="bottom|center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_centerHorizontal="true"
                android:id="@+id/average_output"
                android:text="@string/average"
                android:gravity="center"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/average_input"
                android:gravity="center"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_centerHorizontal="true"
                android:id="@+id/classaverage_output"
                android:text="@string/class_average"
                android:gravity="center"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:inputType="numberDecimal"
                android:ems="10"
                android:gravity="center"
                android:id="@+id/classaverage_input" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_centerHorizontal="true"
                android:id="@+id/standard_deviation_output"
                android:text="@string/standard_deviation"
                android:gravity="center"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:inputType="numberDecimal"
                android:ems="10"
                android:gravity="center"
                android:id="@+id/standard_deviation_input" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_centerHorizontal="true"
                android:id="@+id/ifg_output"
                android:text="@string/ifg"
                android:gravity="center"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:inputType="numberDecimal"
                android:ems="10"
                android:gravity="center"
                android:id="@+id/ifg_input" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_centerHorizontal="true"
                android:id="@+id/coter_output"
                android:text="@string/coter"
                android:gravity="center"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/input_field_height"
                android:inputType="number"
                android:ems="10"
                android:gravity="center"
                android:id="@+id/coter_input" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="bottom">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculer"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>